<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/tv_settings" >
        <ListPreference
            android:defaultValue="0"
            android:entries="@array/autorefresh_step_entries"
            android:entryValues="@array/autorefresh_step_values"
            android:key="autorefresh"
            android:summary="@string/autorefresh_sum"
            android:title="@string/autorefresh_title" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_swipe"
            android:summary="@string/pref_swipe_sum"
            android:title="@string/pref_swipe_title" />

        <ListPreference
            android:defaultValue="15000"
            android:entries="@array/timeout_entries"
            android:entryValues="@array/timeout_values"
            android:key="timeout"
            android:summary="@string/timeout_sum"
            android:title="@string/timeout_title" />

    </PreferenceCategory>

</PreferenceScreen>